--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -16,12 +16,7 @@ jobs:
       with:
         submodules: recursive
 
-    - name: "GitHub release"
-      uses: "marvinpinto/action-automatic-releases@latest"
+    - name: Action Release
+      uses: yakuhzi/release-asset@v1.2.3
       with:
-        repo_token: "${{ secrets.GITHUB_TOKEN }}"
-        automatic_release_tag: "latest"
-        prerelease: true
-        title: "Development Build"
-        files: |
-          README.md
+        file: README.md
