--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -20,3 +20,5 @@ jobs:
       uses: yakuhzi/release-asset@v1.2.3
       with:
         file: README.md
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
