--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -16,9 +16,8 @@ jobs:
       with:
         submodules: recursive
 
-    - name: Action Release
-      uses: yakuhzi/release-asset@v1.2.3
-      with:
-        file: README.md
+    - name: Release
+      uses: fnkr/github-action-ghr@v1
       env:
+        GHR_PATH: README.md
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
