--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -16,9 +16,10 @@ jobs:
       with:
         submodules: recursive
 
-    - name: "Release"
-      uses: laminas/automatic-releases@1.0.1
+    - name: "GitHub release"
+      uses: "marvinpinto/action-automatic-releases@latest"
       with:
-        command-name: "laminas:automatic-releases:release"
-      env:
-        "GITHUB_TOKEN": ${{ secrets.GITHUB_TOKEN }}
+        repo_token: "${{ secrets.GITHUB_TOKEN }}"
+        prerelease: true
+        title: "Development Build"
+        files: README.md
