--- a/.github/workflows/windows-11-arm-cpu.yml
+++ b/.github/workflows/windows-11-arm-cpu.yml
@@ -14,6 +14,6 @@ jobs:
     runs-on: windows-11-arm
 
     steps:
-    - name: Get-CimInstance Win32_Processor | Select-Object Name, NumberOfCores, NumberOfLogicalProcessors, Architecture, AddressWidth, DataWidth, ProcessorId
+    - name: Get-CimInstance Win32_Processor | Select-Object Name, NumberOfCores, NumberOfLogicalProcessors, Architecture, AddressWidth, DataWidth, MaxClockSpeed
       shell: pwsh
-      run: Get-CimInstance Win32_Processor | Select-Object Name, NumberOfCores, NumberOfLogicalProcessors, Architecture, AddressWidth, DataWidth, ProcessorId
+      run: Get-CimInstance Win32_Processor | Select-Object Name, NumberOfCores, NumberOfLogicalProcessors, Architecture, AddressWidth, DataWidth, MaxClockSpeed
